// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for Checkbox component with empty label render correctly: empty-label 1`] = `
<div>
  <div
    class="checkbox-container undefined"
  >
    <div
      class="checkbox-input"
    >
      <input
        class="checkbox-hidden"
        type="checkbox"
      />
      <div
        class="checkbox-styled"
        style="background: rgb(255, 255, 255);"
      >
        <div
          class="check-mark-icon"
          style="visibility: hidden;"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test for Checkbox component with non empty label render correctly: non-empty-label 1`] = `
<div>
  <div
    class="checkbox-container undefined"
  >
    <div
      class="checkbox-input"
    >
      <input
        class="checkbox-hidden"
        type="checkbox"
      />
      <div
        class="checkbox-styled"
        style="background: rgb(255, 255, 255);"
      >
        <div
          class="check-mark-icon"
          style="visibility: hidden;"
        >
          <svg />
        </div>
      </div>
    </div>
    <span
      class="checkbox-label"
    >
      label
    </span>
  </div>
</div>
`;
